@@ -2,6 +2,8 @@ export("%btwn%")
 export("%nin%")
 export(addClasses)
 export(argsAsNamedList)
+export(asMatrixCols)
+export(asMatrixRows)
 export(binPack)
 export(cFactor)
 export(catf)
